@@ -5,7 +5,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>485</width>
+    <width>474</width>
     <height>515</height>
    </rect>
   </property>
@@ -14,7 +14,7 @@
     <number>0</number>
    </property>
    <property name="spacing" >
-    <number>6</number>
+    <number>0</number>
    </property>
    <item>
     <widget class="QTabWidget" name="general_tab" >
@@ -92,32 +92,70 @@
            <number>6</number>
           </property>
           <item>
-           <widget class="QLabel" name="vo_label" >
-            <property name="text" >
-             <string>V&amp;ideo:</string>
+           <layout class="QGridLayout" >
+            <property name="margin" >
+             <number>0</number>
             </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
+            <property name="spacing" >
+             <number>6</number>
             </property>
-            <property name="buddy" >
-             <cstring>vo_combo</cstring>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="MyComboBox" name="vo_combo" >
-            <property name="sizePolicy" >
-             <sizepolicy>
-              <hsizetype>7</hsizetype>
-              <vsizetype>0</vsizetype>
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="editable" >
-             <bool>true</bool>
-            </property>
-           </widget>
+            <item row="1" column="0" >
+             <widget class="QLabel" name="screen_label" >
+              <property name="enabled" >
+               <bool>false</bool>
+              </property>
+              <property name="text" >
+               <string>&amp;Screen:</string>
+              </property>
+              <property name="buddy" >
+               <cstring>screen_combo</cstring>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0" >
+             <widget class="QLabel" name="vo_label" >
+              <property name="text" >
+               <string>V&amp;ideo:</string>
+              </property>
+              <property name="wordWrap" >
+               <bool>false</bool>
+              </property>
+              <property name="buddy" >
+               <cstring>vo_combo</cstring>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1" >
+             <widget class="QComboBox" name="screen_combo" >
+              <property name="enabled" >
+               <bool>false</bool>
+              </property>
+              <property name="sizePolicy" >
+               <sizepolicy>
+                <hsizetype>4</hsizetype>
+                <vsizetype>0</vsizetype>
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1" >
+             <widget class="MyComboBox" name="vo_combo" >
+              <property name="sizePolicy" >
+               <sizepolicy>
+                <hsizetype>7</hsizetype>
+                <vsizetype>0</vsizetype>
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="editable" >
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
           <item>
            <spacer>
@@ -136,32 +174,57 @@
            </spacer>
           </item>
           <item>
-           <widget class="QLabel" name="ao_label" >
-            <property name="text" >
-             <string>&amp;Audio:</string>
+           <layout class="QGridLayout" >
+            <property name="margin" >
+             <number>0</number>
             </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
+            <property name="spacing" >
+             <number>6</number>
             </property>
-            <property name="buddy" >
-             <cstring>ao_combo</cstring>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="MyComboBox" name="ao_combo" >
-            <property name="sizePolicy" >
-             <sizepolicy>
-              <hsizetype>7</hsizetype>
-              <vsizetype>0</vsizetype>
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="editable" >
-             <bool>true</bool>
-            </property>
-           </widget>
+            <item row="0" column="1" >
+             <widget class="MyComboBox" name="ao_combo" >
+              <property name="sizePolicy" >
+               <sizepolicy>
+                <hsizetype>7</hsizetype>
+                <vsizetype>0</vsizetype>
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="editable" >
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0" colspan="2" >
+             <widget class="QLabel" name="space_label" >
+              <property name="sizePolicy" >
+               <sizepolicy>
+                <hsizetype>7</hsizetype>
+                <vsizetype>5</vsizetype>
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text" >
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0" >
+             <widget class="QLabel" name="ao_label" >
+              <property name="text" >
+               <string>&amp;Audio:</string>
+              </property>
+              <property name="wordWrap" >
+               <bool>false</bool>
+              </property>
+              <property name="buddy" >
+               <cstring>ao_combo</cstring>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
          </layout>
         </widget>
@@ -988,11 +1051,6 @@ For translators: don't translate this text, it will be replaced with another one
  </widget>
  <customwidgets>
   <customwidget>
-   <class>MyComboBox</class>
-   <extends>QComboBox</extends>
-   <header>mycombobox.h</header>
-  </customwidget>
-  <customwidget>
    <class>FileChooser</class>
    <extends>QLineEdit</extends>
    <header>filechooser.h</header>
@@ -1002,6 +1060,11 @@ For translators: don't translate this text, it will be replaced with another one
    <extends>QComboBox</extends>
    <header>tristatecombo.h</header>
   </customwidget>
+  <customwidget>
+   <class>MyComboBox</class>
+   <extends>QComboBox</extends>
+   <header>mycombobox.h</header>
+  </customwidget>
  </customwidgets>
  <tabstops>
   <tabstop>general_tab</tabstop>
@@ -1009,6 +1072,7 @@ For translators: don't translate this text, it will be replaced with another one
   <tabstop>screenshot_edit</tabstop>
   <tabstop>vo_combo</tabstop>
   <tabstop>ao_combo</tabstop>
+  <tabstop>screen_combo</tabstop>
   <tabstop>remember_all_check</tabstop>
   <tabstop>remember_time_check</tabstop>
   <tabstop>close_on_finish_check</tabstop>
